1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-protocol-name, java-name): New functions.
	(java-interface-name): Use java-protocol-name.
	(java-qualified-name, with-protocol-java-file): Use java-name.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-class-name): Add "Impl" suffix.
	(java-interface-name): Remove "i_" prefix.

1999-06-18  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-print-javadoc-method): Print @deprecated tag,
	if method has been parsed as `deprecated'.
	(java-print-javadoc-protocol): Likewise for protocols.

1999-06-17  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (method-in-protocol-p): New function, checks to see
	if the specified method is in the current protocol.
	(java-print-javadoc-method): Use `method-in-protocol-p'.  Now
	accepts the `protocol' as parameter as well.  Print `@hide' tag
	for javadoc if it fails the `method-in-protocol-p' call.
	(java-print-class-methods-in-phase): Call
	`java-print-javadoc-method' with new parameter.

1999-06-15  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-run-all-javadoc): New function, suppress
	generation of Makefiles and generation of native class stubs,
	which are not required for javadoc.

1999-06-14  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-print-javadoc-method): New function.  Print
	out method-description-list in javadoc syntax.
	(java-print-class-methods-in-phase): Use it.
	(java-print-javadoc-protocol): New function.  Print out
	protocol-{summary, description-list} in javadoc syntax.
	(java-print-class-phase): Use it.
	(java-print-javadoc-module-summary): New function.  For each
	module, print out the module-{summary, description-list} into
	`package.html' in the appropriate subdirectory for collection by
	javadoc.
	(java-print-classes): Use it.

1999-06-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-methods*): Add -addLongLong: and